[project]
name = "irene-wakeword-training"
version = "0.1.0"
description = "Wake word model training toolkit for Irene Voice Assistant ESP32 nodes"
readme = "README.md"
license = { file = "../../LICENSE" }
authors = [
    { name = "Irene Voice Assistant Contributors" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
requires-python = ">=3.9"
dependencies = [
    # Audio processing and recording
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "numpy>=1.21.0",
    
    # Machine learning (for microwakeword-train)
    "tensorflow>=2.12.0",
    "librosa>=0.10.0",
    "scipy>=1.9.0",
    
    # Data processing and visualization
    "pandas>=1.5.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    
    # Audio utilities
    "pydub>=0.25.1",
    # Note: webrtcvad removed due to compilation issues
    # Can implement simple energy-based VAD instead
    
    # Progress tracking and configuration
    "tqdm>=4.64.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
record-samples = "scripts.record_samples:main"
validate-model = "scripts.validate_model:main"
convert-for-firmware = "scripts.convert_for_firmware:main"

[project.urls]
Homepage = "https://github.com/your-org/Irene-Voice-Assistant"
Repository = "https://github.com/your-org/Irene-Voice-Assistant"
Documentation = "https://github.com/your-org/Irene-Voice-Assistant/tree/main/ESP32/wakeword_training"
Issues = "https://github.com/your-org/Irene-Voice-Assistant/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    # Note: Install microwakeword-train separately if needed:
    # pip install git+https://github.com/kahrendt/microWakeWord.git
]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Exclude generated files
  firmware/.*\.h$
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=scripts --cov-report=term-missing" 